# Social-Media-Aggregator

./: CMakeLists.txt
include/: FacebookAPI.h  InstagramAPI.h  Post.h  SentimentAnalysis.h  TwitterAPI.h
src/: FacebookAPI.cpp  InstagramAPI.cpp  SentimentAnalysis.cpp  TwitterAPI.cpp  main.cpp  utils.cpp
